--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,8 +6,8 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
-
+        android:targetSdkVersion="17" />
+		<uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
