--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ticktacktoe"
+    package="com.android.asteroid"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,12 +9,13 @@
         android:targetSdkVersion="17" />
 		<uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <application
+        
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.ticktacktoe.MainActivity"
+            android:name="com.android.asteroid.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
