--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,21 +7,45 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-		<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
-        
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.android.asteroid.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.android.asteroid.MainMenu"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_main_menu"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.android.asteroid.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:parentActivityName="com.android.asteroid.MainMenu"
+            android:screenOrientation="landscape" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.android.asteroid.MainMenu" />
+        </activity>
+        
+        <activity
+            android:name="com.android.asteroid.Ranking"
+            android:label="@string/title_activity_ranking"
+            android:parentActivityName="com.android.asteroid.MainMenu" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.android.asteroid.MainMenu" />
         </activity>
     </application>
 
